after updating redirectives

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
 <div >
   
     <button type="button" class="btn btn-outline-danger" label="Click" (click)="toggleChild()">List</button>
-    <div>
+    <div id="table-view">
         <app-list [showMePartially]="showVar"></app-list>
     </div>
 </div>
